1.photo_app index html에 css추가

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <!-- Material Design icon font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="./dist/bundle.js" defer ></script>
+    <style type="text/css">
+        .material-icons {line-height:54px !important;}
+        .album-list {overflow:hidden !important;}
+        .demo-card-square {float:left !important;}
+    </style>
 </head>
 <body>
 <!-- Always shows a header, even in smaller screens. -->
